#425: fixed empty list creation